# struct_vault

./: .gitignore  Cargo.toml  LICENSE  README.md
.config/: TestStruct.toml  async_multithread_example.toml  multithread_example.toml  send_sync_example.toml  simple_default.toml  test_struct.toml
.config/custom_example/: AppState.toml
.test_vault/async/: async_example.json
.test_vault/formats/: format_example_json.json  format_example_toml.toml  format_example_yaml.yaml
.test_vault/json_dir/: json_config.json
examples/: 00_injected_field.rs  01_default_toml.rs  01_simple_load.rs  02_json_custom_dir.rs  02_simple_save.rs  03_simple_load_or_default copy.rs  03_simple_load_or_default.rs  03_yaml_format.rs  04_complex_struct.rs  04_simple_struct_vault_simple.rs  05_custom_dir.rs  05_error_missing_file.rs  05_save_load_fullpath.rs  06_error_corrupted_file.rs  06_save_in_load_from.rs  07_error_no_config.rs  08_runtime_modification.rs  09_load_preserves_config.rs  10_format_comparison.rs  11_incremental_updates.rs  12_timestamp.rs  13_multithread.rs  14_async.rs  15_async_concurrency.rs  16_send_sync.rs  Cargo.toml  main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: lib.rs
struct_vault/: Cargo.toml
struct_vault/src/: async_feature.rs  async_support.rs  lib.rs
struct_vault_macros/: Cargo.toml
struct_vault_macros/src/: lib.rs
