[package]
name = "struct_vault"
version = "0.1.0"
edition = "2024"
description = "Simple persistence of Rust structs to disk using Serde"
license = "MIT"
repository = "https://github.com/icsboyx/struct_vault"
readme = "README.md"
keywords = ["serde", "config", "persistence", "struct", "toml"]
categories = ["config", "filesystem"]

[dependencies]
anyhow = "1.0.101"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "0.9.11"
