[package]
name = "struct_vault"
version = "0.1.0"
edition = "2024"

[features]
default = ["derive"]
derive = ["dep:struct_vault_macros"]
async = ["dep:tokio"]

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
toml = "0.9.7"
uuid = { version = "1.20.0", features = ["v4"] }

# MUST be optional if you gate it behind a feature.
struct_vault_macros = { path = "../struct_vault_macros", optional = true }
tokio = { version = "1.43.0", features = ["fs", "io-util", "rt"], optional = true }
